# aura

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Xargo.toml  entrypoint.sh  x86_64-unknown-efi.json
src/: alloc.rs  lib.rs
src/arch/uefi/: def.rs
